--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -295,9 +295,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Japanese Habits for Your Calm & Positive Living">
+                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living">
                     <div class="video-info">
-                        <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
+                        <h3>Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -695,7 +695,7 @@
                     <div class="video-info">
                         <h3>Cauvery Calling’s Impact - Read the Caption for Details</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -706,7 +706,7 @@
                     <div class="video-info">
                         <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5303,7 +5303,7 @@
                         <div class="video-info">
                             <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7480,7 +7480,7 @@
                         <div class="video-info">
                             <h3>Cauvery Calling’s Impact - Read the Caption for Details</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8230,9 +8230,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Japanese Habits for Your Calm & Positive Living">
+                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living">
                         <div class="video-info">
-                            <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
+                            <h3>Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
