--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/shorts/CNAmt5iAfjQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/CNAmt5iAfjQ/mqdefault.jpg" alt="Sidemen’s 12 Birthday! 🥳">
+                    <img src="https://i.ytimg.com/vi/CNAmt5iAfjQ/mqdefault.jpg" alt="12 YEARS OF SIDEMEN 🥳">
                     <div class="video-info">
-                        <h3>Sidemen’s 12 Birthday! 🥳</h3>
+                        <h3>12 YEARS OF SIDEMEN 🥳</h3>
                         <div class="channel">Vikkstar123</div>
                         <div class="date">1 hours ago</div>
                     </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Don't Ban Firecrackers | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Don't Ban Firecrackers | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9568,9 +9568,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/CNAmt5iAfjQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/CNAmt5iAfjQ/mqdefault.jpg" alt="Sidemen’s 12 Birthday! 🥳">
+                        <img src="https://i.ytimg.com/vi/CNAmt5iAfjQ/mqdefault.jpg" alt="12 YEARS OF SIDEMEN 🥳">
                         <div class="video-info">
-                            <h3>Sidemen’s 12 Birthday! 🥳</h3>
+                            <h3>12 YEARS OF SIDEMEN 🥳</h3>
                             <div class="channel">Vikkstar123</div>
                             <div class="date">1 hours ago</div>
                         </div>
